# RM2022-Infantry-Vision

./: .gitignore  CMakeLists.txt  README.md
Configure/: Debug.xml  NUM_Classifier.onnx  RuneParam.xml  Settings.xml
Configure/param/: conv1_b  conv1_w  conv2_b  conv2_w  fc1_b  fc1_w  fc2_b  fc2_w
include/Armor/: ArmorBox.h  ArmorDetector.h  CV_Classifier.h  SpinDetector.h  classfier.h
include/Const/: const.h  rm_types.h
include/Debug/: Debug.h  DebugParam.h
include/Extend/: Mat_time.h  Tools.h
include/ImageProgress/: ImageProgress.h
include/Rune/: Fitting.h  README.md  RuneBox.h  RuneDetector.h
include/Serial/: CanSerial.h  Serial.h
include/Solver/: CoordConvert.h  EKF.h  Predictor.h  Solver.h
include/mercure/: mercure_driver.h
src/: main.cpp
src/Armor/: ArmorBox.cpp  ArmorDetector.cpp  CV_Classifier.cpp  SpinDetector.cpp  classfier.cpp
src/Debug/: Debug.cpp
src/Extend/: Mat_time.cpp  Tools.cpp
src/ImageProgress/: ImageProgress.cpp
src/Rune/: Fitting.cpp  RuneBox.cpp  RuneDetector.cpp
src/Serial/: CanSerial.cpp  Serial.cpp
src/Solver/: EKF.cpp  Predictor.cpp  Solver.cpp
src/mercure/: CMakeLists.txt  mercure_driver.cpp
